--- a/app/templates/book.hbs
+++ b/app/templates/book.hbs
@@ -1,1 +1,8 @@
-{{outlet}}
+{{book-detail book=model}}
+
+<div class="book-reviews">
+  <h2 class="tag-line reviews-title">Reviews</h2>
+    {{reviews-list book=model}}
+</div>
+
+{{new-review saveNewReview="saveNewReview" book=model}}
