--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,14 @@
-{{outlet}}
+<h1 class="page-header">DanKo Book Review</h1>
+<h3 class="tag-line">Welcome to the best book review site on the Internet!</h3>
+
+<hr>
+{{display-favorite-books}}
+<hr>
+
+<div class="index-books-list">
+  {{#each model as |book|}}
+    <div class="index-each-book">
+      {{book-tile book=book}}
+    </div>
+  {{/each}}
+</div>
